allocate column in ScTable::SetPatternAreaCondFormat() (tdf#147894)

Change-Id: Id14bb20ef5e49551cef5216b5149e3c281c04223